[package]
name = "picousbhid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt= "0.2"
rp-pico = "0.7"
usbd-serial = "0.1"
usbd-human-interface-device = "0.3"
usb-device= "0.2"
heapless = "0.7"
cortex-m = "0.7.6"
cortex-m-rt = "0.7"
critical-section = "1"
embedded-hal = "0.2"
bitvec = { version = "1", default-features = false }
#rkyv = { version = "0.7", default-features = false, features = ["size_32", "archive_le", "strict"] }
# Cannot use rkyv validation as it requires alloc
#bytecheck = { version = "0.7.0", default-features = false } # No simdutf8 because RP2040 does not have SIMD support
fugit = "0.3"
frunk = { version = "0.4", default-features = false }

serde = { version = "1.0", default-features = false, features = ["derive"] }
postcard = { version = "1.0" }
crc = "3.0"
