[package]
name = "picousbserial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt= "0.2.0"
rp-pico = "0.7.0"
usbd-serial = "0.1.1"
usb-device= "0.2.9"
heapless = "0.7.9"
cortex-m-rt = "0.7"
fugit = "0.3.6"
embedded-hal = "0.2.5"